# MolSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  format.sh
.github/workflows/: build-docs.yml  build-raw.yml  clang-format.yml  lint.yml  run-tests.yml
bench/: BMLJ.cpp  BMLennardJones.cpp  BMLennardJonesLC.cpp  BMVerlet.cpp  CMakeLists.txt  output-ljcutoff.csv  output-ljlc.csv
bench/results/: output-ljcomplete.csv
bench/worksheet/: BMWorksheet2Task3.cpp
cmake/modules/: benchmark.cmake  cflags.cmake  doxygen.cmake  gtest.cmake  pgo.cmake  profiling.cmake  spdlog.cmake  xerces.cmake
input/: LJtest.txt  SimulationXSD.xsd  input-lj-w2t4.xml  input-lj-w3t2-small-periodic.xml  input-lj-w3t2-small.xml  input-lj-w3t2.xml  input-lj-w3t4.xml  input-lj-w4t2-large.xml  input-lj-w4t2-small.xml  input-lj-w4t3-base.xml  input-lj-w4t5-large.xml  input-lj-w4t5-small.xml  input-lj-w5t1.xml  input-lj-w5t3-coarse.xml  input-lj-w5t3-fine.xml  input-lj-w5t3-small.xml  input-lj-w5t3.xml  input-lj-w5t4-increased_gravity.xml  input-lj-w5t4-inner_wall.xml  input-lj-w5t4-no_walls.xml  input-lj-w5t4-normal.xml  input-lj-w5t4.xml  input-lj.txt  input-lj.xml  input-lj2.txt  input-test.txt
input/xsd/: SimulationXSD.xsd
scripts/: createXSD.sh  format.sh  lint.sh  parallelprof.sh
src/: CMakeLists.txt  MolSim.cpp  Particle.cpp  Particle.h
src/io/input/: CLIParser.cpp  CLIParser.h  FileReader.cpp  FileReader.h  XMLReader.cpp  XMLReader.h
src/io/output/: FileWriter.cpp  FileWriter.h  NullWriter.cpp  NullWriter.h  VTKWriter.cpp  VTKWriter.h  WriterFactory.cpp  WriterFactory.h  XMLWriter.cpp  XMLWriter.h  XYZWriter.cpp  XYZWriter.h
src/io/vtk/: vtk-unstructured.cpp  vtk-unstructured.h
src/io/xsd/: SimulationXSD.cpp  SimulationXSD.h
src/objects/: Cell.cpp  Cell.h  CellContainer.cpp  CellContainer.h  Cluster.cpp  Cluster.h  Cuboid.cpp  Cuboid.h  CuboidGenerator.cpp  CuboidGenerator.h  Disc.cpp  Disc.h  FlowSimulationAnalyzer.cpp  FlowSimulationAnalyzer.h  LinkedCells.cpp  LinkedCells.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  Thermostat.cpp  Thermostat.h
src/simulations/: Gravity.cpp  Gravity.h  LennardJones.cpp  LennardJones.h  LennardJonesLC.cpp  LennardJonesLC.h  NanoScaleFlowSim.cpp  NanoScaleFlowSim.h  Simulation.cpp  Simulation.h  SimulationFactory.cpp  SimulationFactory.h  SimulationLC.cpp  SimulationLC.h  Verlet.cpp  Verlet.h
src/strategies/: BoundaryConditions.cpp  BoundaryConditions.h  F.cpp  F.h  ForceCalculation.cpp  ForceCalculation.h  PositionCalculation.cpp  PositionCalculation.h  StrategyFactory.cpp  StrategyFactory.h  V.cpp  V.h  VelocityCalculation.cpp  VelocityCalculation.h  X.cpp  X.h
src/utils/: Arguments.h  ArrayUtils.h  CLIUtils.h  CellUtils.h  MaxwellBoltzmannDistribution.h  OMPWrapper.h  PathUtils.h  RNG.h  StringUtils.h  Timer.h
tests/: CMakeLists.txt  Dummy.cpp
tests/files/: testCuboidInput.txt  testParticleInput.txt  testXMLInvalid_GarbageTags.xml  testXMLInvalid_IncorrectStructure.xml  testXMLInvalid_MissingObjectsContents.xml  testXMLInvalid_MissingObjectsTag.xml  testXMLInvalid_MissingType.xml  testXMLInvalid_NotXML.xml  testXMLInvalid_WrongTypes.xml  testXMLValid_Complete.xml  testXMLValid_NoOptionals.xml
tests/io/: TestFileReader.cpp  TestXMLReader.cpp
tests/objects/: TestCellContainer.cpp  TestCuboid.cpp  TestCuboidGenerator.cpp  TestDisc.cpp  TestFlowSimulationAnalyzer.cpp  TestParticle.cpp  TestParticleContainer.cpp  TestThermostat.cpp
tests/simulations/: TestGravity.cpp  TestLennardJones.cpp  TestVerlet.cpp
tests/strategies/: TestBoundaryConditions.cpp  TestF.cpp  TestForceCalculation.cpp  TestPositionCalculation.cpp  TestV.cpp  TestX.cpp
tests/utils/: TestStringUtils.cpp
